# ipr-keyboard

./: .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  BLUETOOTH_PAIRING.md  CLAUDE.md  DEVELOPMENT_WORKFLOW.md  DEVICE_BRINGUP.md  DOCUMENTATION_UPDATE_SUMMARY.md  PAIRING_FIX_SUMMARY.md  README.md  SCRIPT_EVALUATION.md  SERVICES.md  TESTING_PLAN.md  config.json  ipr-keyboard.code-workspace  pyproject.toml  secret_key.txt  users.default.json  users.json
.claude/: settings.json  settings.local.json
.codex/: config.toml  mcp.json
.github/: copilot-instructions.md
docs/: README.md  pr2-doc-audit.md
provision/: 00_bootstrap.sh  00_provision_wizard.sh  01_os_base.sh  02_device_identity.sh  03_app_install.sh  04_enable_services.sh  05_copilot_debug_tools.sh  05_verify.sh  06_verify.sh  07_show_info.sh  README.md  common.env.example  ipr_mcp_guard.sh  provision_wizard.sh
scripts/: 00_set_env.sh  01_system_setup.sh  02_configure_bluetooth.sh  03_install_bt_helper.sh  04_setup_venv.sh  05_install_service.sh  06_setup_irispen_mount.sh  07_smoke_test.sh  08_e2e_demo.sh  09_e2e_systemd_demo.sh  10_diagnose_failure.sh  11_mount_irispen_mtp.sh  12_sync_irispen_to_cache.sh  13_install_bt_hid_daemon.sh  14_test_bt_keyboard.sh  15_switch_keyboard_backend.sh  16_status.sh  16_switch_keyboard_backend.sh  17_run_web_server.sh  18_setup_rpi_extras.sh  README.md  ble_backend_manager.sh  ble_configure_system.sh  ble_install_daemon.sh  ble_install_helper.sh  ble_setup_extras.sh  ble_switch_backend.sh  dev_run_app.sh  dev_run_tests.sh  (+32 more)
(+196 files in other folders)
