[project]
name = "ipr-keyboard"
version = "0.1.0"
description = "IrisPen to Bluetooth keyboard bridge for Raspberry Pi"
readme = "README.md"
authors = [
    { name = "Michael Eibye", email = "michael@eibye.name" }
]
requires-python = ">=3.13"
dependencies = [
    "flask>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
ipr-keyboard = "ipr_keyboard.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

# Tell uv (and other PEP 517 build tools) how to build the package
[build-system]
requires = ["hatchling>=1.0"]
build-backend = "hatchling.build"

# Explicitly mark this as a packaged project for uv
[tool.uv]
package = true